# Otus_2

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: MyAllocator.h  MyContainer.h
src/: MyAllocator.cpp  main.cpp
tests/: AllocatorTest.cpp
